# game-of-life

./: BUILD.md  Cargo.toml  README.md  build.rs
.github/workflows/: build.yml  release.yml
src/: main.rs  patterns.rs  utils.rs
src/interface/: mod.rs
src/lib/: cell.rs  mod.rs  neighbor_list_index.rs  world.rs
